force-app/main/default/objects/PermissionRequirement__c/PermissionRequirement__c.object-meta.xml
<CustomObject>
    <label>権限定義</label>
    <nameField>
        <label>定義名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>