force-app/main/default/objects/PermissionRequirement__c/fields/create__c.field-meta.xml
<CustomField>
    <fullName>create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>作成</label>
    <type>Checkbox</type>
</CustomField>