force-app/main/default/objects/PermissionRequirement__c/fields/document__c.field-meta.xml
<CustomField>
    <fullName>document__c</fullName>
    <label>説明</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>