force-app/main/default/objects/PermissionRequirement__c/fields/read__c.field-meta.xml
<CustomField>
    <fullName>read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>参照</label>
    <type>Checkbox</type>
</CustomField>