force-app/main/default/objects/PermissionRequirement__c/fields/targetObject__c.field-meta.xml
<CustomField>
    <fullName>targetObject__c</fullName>
    <label>対象オブジェクト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>objectAPIName</valueSetName>
    </valueSet>
</CustomField>