force-app/main/default/objects/PermissionRequirement__c/fields/update__c.field-meta.xml
<CustomField>
    <fullName>update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>編集</label>
    <type>Checkbox</type>
</CustomField>